// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Rendering renders the UI snapshot correctly 1`] = `
<nav
  aria-label="Pagination"
  className="css-1xdhyk6"
  id="firstPage"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    id="firstPage-list"
  >
    <li>
      <a
        aria-current="page"
        aria-label="Page 1"
        className="css-1eo4rk2"
        href="page=1"
        id="firstPage-1"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 2"
        className="css-1xdhyk6"
        href="page=2"
        id="firstPage-2"
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 3"
        className="css-1xdhyk6"
        href="page=3"
        id="firstPage-3"
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 4"
        className="css-1xdhyk6"
        href="page=4"
        id="firstPage-4"
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 5"
        className="css-1xdhyk6"
        href="page=5"
        id="firstPage-5"
      >
        5
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 10"
        className="css-1xdhyk6"
        href="page=10"
        id="firstPage-10"
      >
        10
      </a>
    </li>
    <li>
      <a
        aria-label="Next page"
        className="css-1xdhyk6"
        href="page=2"
        id="firstPage-Next"
      >
        Next
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Pagination Rendering renders the UI snapshot correctly 2`] = `
<nav
  aria-label="Pagination"
  className="css-1xdhyk6"
  id="lastPage"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    id="lastPage-list"
  >
    <li>
      <a
        aria-label="Previous page"
        className="css-1xdhyk6"
        href="page=9"
        id="lastPage-Previous"
      >
        Previous
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 1"
        className="css-1xdhyk6"
        href="page=1"
        id="lastPage-1"
      >
        1
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 6"
        className="css-1xdhyk6"
        href="page=6"
        id="lastPage-6"
      >
        6
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 7"
        className="css-1xdhyk6"
        href="page=7"
        id="lastPage-7"
      >
        7
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 8"
        className="css-1xdhyk6"
        href="page=8"
        id="lastPage-8"
      >
        8
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 9"
        className="css-1xdhyk6"
        href="page=9"
        id="lastPage-9"
      >
        9
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        aria-label="Page 10"
        className="css-1eo4rk2"
        href="page=10"
        id="lastPage-10"
      >
        10
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Pagination Rendering renders the UI snapshot correctly 3`] = `
<nav
  aria-label="Pagination"
  className="css-1xdhyk6"
  id="middlePage"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    id="middlePage-list"
  >
    <li>
      <a
        aria-label="Previous page"
        className="css-1xdhyk6"
        href="page=4"
        id="middlePage-Previous"
      >
        Previous
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 1"
        className="css-1xdhyk6"
        href="page=1"
        id="middlePage-1"
      >
        1
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 4"
        className="css-1xdhyk6"
        href="page=4"
        id="middlePage-4"
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        aria-label="Page 5"
        className="css-1eo4rk2"
        href="page=5"
        id="middlePage-5"
      >
        5
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 6"
        className="css-1xdhyk6"
        href="page=6"
        id="middlePage-6"
      >
        6
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 10"
        className="css-1xdhyk6"
        href="page=10"
        id="middlePage-10"
      >
        10
      </a>
    </li>
    <li>
      <a
        aria-label="Next page"
        className="css-1xdhyk6"
        href="page=6"
        id="middlePage-Next"
      >
        Next
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Pagination Rendering renders the UI snapshot correctly 4`] = `
<nav
  aria-label="Pagination"
  className="css-kle7zy"
  id="chakra"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    id="chakra-list"
  >
    <li>
      <a
        aria-current="page"
        aria-label="Page 1"
        className="css-1eo4rk2"
        href="page=1"
        id="chakra-1"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 2"
        className="css-1xdhyk6"
        href="page=2"
        id="chakra-2"
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 3"
        className="css-1xdhyk6"
        href="page=3"
        id="chakra-3"
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 4"
        className="css-1xdhyk6"
        href="page=4"
        id="chakra-4"
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 5"
        className="css-1xdhyk6"
        href="page=5"
        id="chakra-5"
      >
        5
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 10"
        className="css-1xdhyk6"
        href="page=10"
        id="chakra-10"
      >
        10
      </a>
    </li>
    <li>
      <a
        aria-label="Next page"
        className="css-1xdhyk6"
        href="page=2"
        id="chakra-Next"
      >
        Next
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Pagination Rendering renders the UI snapshot correctly 5`] = `
<nav
  aria-label="Pagination"
  className="css-1xdhyk6"
  data-testid="props"
  id="props"
  role="navigation"
>
  <ul
    className="css-1xdhyk6"
    id="props-list"
  >
    <li>
      <a
        aria-current="page"
        aria-label="Page 1"
        className="css-1eo4rk2"
        href="page=1"
        id="props-1"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 2"
        className="css-1xdhyk6"
        href="page=2"
        id="props-2"
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 3"
        className="css-1xdhyk6"
        href="page=3"
        id="props-3"
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 4"
        className="css-1xdhyk6"
        href="page=4"
        id="props-4"
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 5"
        className="css-1xdhyk6"
        href="page=5"
        id="props-5"
      >
        5
      </a>
    </li>
    <li>
      ...
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 10"
        className="css-1xdhyk6"
        href="page=10"
        id="props-10"
      >
        10
      </a>
    </li>
    <li>
      <a
        aria-label="Next page"
        className="css-1xdhyk6"
        href="page=2"
        id="props-Next"
      >
        Next
      </a>
    </li>
  </ul>
</nav>
`;
